maint: fix display issue with form on mobile devices, attempt to simplify gallery css code to prevent unwanted display issue on iPhone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -633,7 +633,7 @@ form {
     position: relative;
     width: 90%;
     margin-left: 5%;
-    height: 100vh;
+    height: fit-content;
     text-align: center;
     padding: 60px 0 180px 0;
     background: url('../images/Contact_Picture.webp') no-repeat center center;
@@ -876,17 +876,20 @@ textarea {
 .gallery-grid {
     width: 90%;
     margin-left: 5%;
-    --gap: 2px;
-    --num-cols: 8;
-    --row-height: fit-content;
+    /* --gap: 2px; */
+    /* --num-cols: 8; */
+    /* --row-height: fit-content; */
 
     box-sizing: border-box;
-    padding: var(--gap);
+    /* padding: var(--gap); */
+    padding: 2px;
 
     display: grid;
-    grid-template-columns: repeat(var(--num-cols), 1fr);
-    grid-auto-rows: var(--row-height);
-    gap: var(--gap);
+    /* grid-template-columns: repeat(var(--num-cols), 1fr); */
+    /* grid-auto-rows: var(--row-height); */
+    grid-template-columns: repeat(8, 1fr);
+    /* gap: var(--gap); */
+    gap: 2px;
     grid-auto-flow: row;
 }
 
